--- a/package.json
+++ b/package.json
@@ -1,7 +1,44 @@
 {
+  "name": "onepace-stremio-addon",
+  "version": "1.0.0",
+  "description": "One Pace Stremio addon with Torbox streaming integration",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "stremio",
+    "addon",
+    "one-piece",
+    "one-pace",
+    "torbox",
+    "streaming",
+    "anime"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "axios": "^1.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "your-repo-url"
+  },
+  "vercel": {
+    "functions": {
+      "server.js": {
+        "maxDuration": 30
+      }
+    }
   }
 }
